...
        },
      ]
    );
  };

  return (
    <View style={[styles.container, { backgroundColor: colors.background }]} testID="settingsScreen">
      <LinearGradient
        colors={[colors.background, colors.backgroundLight, colors.background]}
        style={StyleSheet.absoluteFill}
        locations={[0, 0.5, 1]}
      />
      <SafeAreaView style={styles.safeArea} edges={['top', 'bottom']}>
        <Appbar.Header style={[styles.appbar, { backgroundColor: colors.background }]}>
          <Appbar.BackAction
            onPress={() => router.back()}
            accessibilityLabel="settings-go-back"
            testID="settingsBack"
          />
          <Appbar.Content title={t('settings.title')} />
        </Appbar.Header>

        <ScrollView
          showsVerticalScrollIndicator={false}
...
